WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40871
Notification should expose ltr/rtl as TextDirection, not String
https://bugs.webkit.org/show_bug.cgi?id=40871
Summary
Notification should expose ltr/rtl as TextDirection, not String
John Gregg
Reported
2010-06-18 18:44:39 PDT
Notification should expose ltr/rtl as TextDirection, not String
Attachments
Patch
(3.70 KB, patch)
2010-06-18 19:35 PDT
,
John Gregg
no flags
Details
Formatted Diff
Diff
Patch
(3.85 KB, patch)
2010-06-18 20:36 PDT
,
John Gregg
no flags
Details
Formatted Diff
Diff
Patch
(3.82 KB, patch)
2010-06-21 11:01 PDT
,
John Gregg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
John Gregg
Comment 1
2010-06-18 19:35:57 PDT
Created
attachment 59173
[details]
Patch
WebKit Review Bot
Comment 2
2010-06-18 19:58:28 PDT
Attachment 59173
[details]
did not build on chromium: Build output:
http://webkit-commit-queue.appspot.com/results/3289339
John Gregg
Comment 3
2010-06-18 20:36:17 PDT
Created
attachment 59174
[details]
Patch
WebKit Review Bot
Comment 4
2010-06-18 20:52:24 PDT
Attachment 59174
[details]
did not build on chromium: Build output:
http://webkit-commit-queue.appspot.com/results/3319350
John Gregg
Comment 5
2010-06-21 11:01:15 PDT
Created
attachment 59265
[details]
Patch
WebKit Commit Bot
Comment 6
2010-06-25 04:43:15 PDT
Comment on
attachment 59265
[details]
Patch Clearing flags on attachment: 59265 Committed
r61849
: <
http://trac.webkit.org/changeset/61849
>
WebKit Commit Bot
Comment 7
2010-06-25 04:43:20 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 8
2010-06-25 05:00:05 PDT
http://trac.webkit.org/changeset/61849
might have broken Qt Linux Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug