2010-06-25  John Gregg  <johnnyg@google.com>

Reviewed by Darin Fisher.

        Notification should expose ltr/rtl as TextDirection, not String
        https://bugs.webkit.org/show_bug.cgi?id=40871

        No new tests; existing test covers this, just renaming a method.

        * notifications/Notification.h:
        (WebCore::Notification::direction):
2010-06-25  John Gregg  <johnnyg@google.com>

        Reviewed by Darin Fisher.

        Notification should expose ltr/rtl as TextDirection, not String
        https://bugs.webkit.org/show_bug.cgi?id=40871

        * public/WebNotification.h:
        * src/WebNotification.cpp:
        (WebKit::WebNotification::direction):

git-svn-id: svn://svn.chromium.org/blink/trunk@61849 bbb929c8-8fbe-4397-9dbb-9b2b20218538