third_party/WebKit/WebCore/notifications/Notification.h
@@ -45,6 +45,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "NotificationContents.h"
 #include "RegisteredEventListener.h"
 #include "SharedBuffer.h"
+#include "TextDirection.h"
 #include "ThreadableLoader.h"
 #include "ThreadableLoaderClient.h"
 #include <wtf/OwnPtr.h>
@@ -76,6 +77,8 @@ namespace WebCore {
         void setDir(const String& dir) { m_direction = dir; }
         String replaceId() const { return m_replaceId; }
         void setReplaceId(const String& replaceId) { m_replaceId = replaceId; }
+
+        TextDirection direction() const { return dir() == "rtl" ? RTL : LTR; }
 
         DEFINE_ATTRIBUTE_EVENT_LISTENER(display);
         DEFINE_ATTRIBUTE_EVENT_LISTENER(error);
