third_party/WebKit/WebKit/chromium/public/WebNotification.h
@@ -33,6 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define WebNotification_h
 
 #include "WebCommon.h"
+#include "WebTextDirection.h"
 
 #if WEBKIT_IMPLEMENTATION
 namespace WebCore { class Notification; }
@@ -76,7 +77,11 @@ public:
     WEBKIT_API WebString title() const;
     WEBKIT_API WebString body() const;
 
+    // FIXME: Remove dir() when no longer referenced.
+    // dir() is deprecated; use direction().
     WEBKIT_API WebString dir() const;
+    WEBKIT_API WebTextDirection direction() const;
+
     WEBKIT_API WebString replaceId() const;
 
     // Called to indicate the notification has been displayed.
