third_party/WebKit/WebKit/chromium/src/WebNotification.cpp
@@ -37,6 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Notification.h"
 
 #include "WebString.h"
+#include "WebTextDirection.h"
 #include "WebURL.h"
 
 #include <wtf/PassRefPtr.h>
@@ -95,9 +96,17 @@ WebString WebNotification::body() const
     return m_private->contents().body();
 }
 
+// FIXME: remove dir() when unreferenced.  Being replaced by direction().
 WebString WebNotification::dir() const
 {
     return m_private->dir();
+}
+
+WebTextDirection WebNotification::direction() const
+{
+    return (m_private->direction() == RTL) ?
+        WebTextDirectionRightToLeft :
+        WebTextDirectionLeftToRight;
 }
 
 WebString WebNotification::replaceId() const
